--- a/BookNote/第一行代码/第5章-全部大喇叭，详解广播机制.md
+++ b/BookNote/第一行代码/第5章-全部大喇叭，详解广播机制.md
@@ -1,4 +1,4 @@
-# 第五章 全部大喇叭，详解广播机制
+# 第 5 章 全部大喇叭，详解广播机制
 
 1. Android 中的广播主要可以分为两种类型，标准广播和有序广播。
 　　标准广播( Normal broadcasts )是一种完全异步执行的广播，在广播发出之后，所有的广播接收器几乎都会在同一时刻接收到这条广播消息，因此它们之间没有任何先后顺序可言。这种广播的效率会比较高，单同事也意味着它是无法被截断的。
