--- a/BookNote/第一行代码/第8章-丰富你的程序，运行手机多媒体.md
+++ b/BookNote/第一行代码/第8章-丰富你的程序，运行手机多媒体.md
@@ -1,4 +1,4 @@
-# 第八章 丰富你的程序，运行手机多媒体
+# 第 8 章 丰富你的程序，运行手机多媒体
 1. 通知（Notification）是 Android 系统中比较有特色的一个功能，当某个应用程序希望向用户发出一些提示信息，而该应用程序又不在前台运行时，就可以借助通知来实现。发出一条通知后，手机最上方的状态栏中会显示一个通知的图标，下拉状态栏后可以看到通知的详细内容。
 
 2. 创建通知的详细步骤：首先需要一个 NotificationManager 来对通知进行管理，可以调用 Context 的getSystemService() 方法获取到。getSystemService() 方法接收一个字符串参数用于确定获取系统的哪个服务，这里我们传入 Context.NOTIFICATION_SERVICE 即可。因此，获取 NotificationManager 的实例就可以写成：
