--- a/BookNote/第一行代码/第7章-跨程序共享数据，探究内容提供器.md
+++ b/BookNote/第一行代码/第7章-跨程序共享数据，探究内容提供器.md
@@ -1,4 +1,4 @@
-# 第七章 跨程序共享数据，碳九内容提供器
+# 第 7 章 跨程序共享数据，探究内容提供器
 1. 使用持久化技术所保存的数据都只能在当前程序中访问。
 
 2. 内容提供器（Content Provider）主要用于在不同的应用程序之间实现数据共享的功能，它提供了一套完整的机制，允许一个程序访问另一个程序中的数据，同时还能保证被访数据的安全性。目前，使用内容提供器是 Android 实现跨程序共享数据的标准方式。
