--- a/BookNote/第一行代码/第10章-看看精彩的世界，使用网络技术.md
+++ b/BookNote/第一行代码/第10章-看看精彩的世界，使用网络技术.md
@@ -1,7 +1,9 @@
-# 第十章 看看精彩的世界，使用网络技术
-    1.HTTP协议的工作原理就是客户端向服务器发出一条HTTP请求，，服务器收到请求之后会返回一些数据给客户端，然后客户端再对这些数据进行解析和处理就可以了。
-    2.在Android上发送HTTP请求的方式一般有两种，HttpURLConnection和HttpClient。
-    3.HttpURLConnection的用法：
+# 第 10 章 看看精彩的世界，使用网络技术
+1. HTTP 协议的工作原理就是客户端向服务器发出一条 HTTP 请求，，服务器收到请求之后会返回一些数据给客户端，然后客户端再对这些数据进行解析和处理就可以了。
+
+2. 在Android上发送HTTP请求的方式一般有两种，HttpURLConnection和HttpClient。
+
+3. HttpURLConnection的用法：
          首先需要获取到HttpURLConnection的实例，一般只需new出一个URL对象，并传入目标的网络地址，然后调用一下openConnection()方法即可，如下所示：
 	      URL url = new URL("http://www.baidu.com");
 	      HttpURLConnection connection = (HttpURLConnection) url.openConnection();
