第一行代码读书记录整理

--- a/BookNote/第一行代码/第10章-看看精彩的世界，使用网络技术.md
+++ b/BookNote/第一行代码/第10章-看看精彩的世界，使用网络技术.md
@@ -1,52 +1,83 @@
 # 第 10 章 看看精彩的世界，使用网络技术
-1. HTTP 协议的工作原理就是客户端向服务器发出一条 HTTP 请求，，服务器收到请求之后会返回一些数据给客户端，然后客户端再对这些数据进行解析和处理就可以了。
+1. HTTP 协议的工作原理就是客户端向服务器发出一条 HTTP 请求，服务器收到请求之后会返回一些数据给客户端，然后客户端再对这些数据进行解析和处理就可以了。
 
-2. 在Android上发送HTTP请求的方式一般有两种，HttpURLConnection和HttpClient。
+2. 在 Android 上发送 HTTP 请求的方式一般有两种，HttpURLConnection 和 HttpClient 。
 
-3. HttpURLConnection的用法：
-         首先需要获取到HttpURLConnection的实例，一般只需new出一个URL对象，并传入目标的网络地址，然后调用一下openConnection()方法即可，如下所示：
+3. HttpURLConnection 的用法：
+　　首先需要获取到 HttpURLConnection 的实例，一般只需 new 出一个 URL 对象，并传入目标的网络地址，然后调用一下 openConnection() 方法即可，如下所示：
+```
 	      URL url = new URL("http://www.baidu.com");
 	      HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-	 得到了HttpURLConnection的实例之后，我们可以设置一下HTTP请求所使用的方法。常用的方法主要有两个，GET和POST。GET表示希望从服务器那里获取数据，而POST则表示希望提交数据给服务器。写法如下：
+```
+　　得到了 HttpURLConnection 的实例之后，我们可以设置一下 HTTP 请求所使用的方法。常用的方法主要有两个，GET和 POST 。GET 表示希望从服务器那里获取数据，而 POST 则表示希望提交数据给服务器。写法如下：
+```
 	      connection.setRequestMethod("GET");
-	 接下来就可以进行一些自由地定制了，比如设置连接超时，读取超时的毫秒数，以及服务器希望得到的一些消息头等。这部分内容根据自己的实际情况进行编写，示例写法如下：
+```
+　　接下来就可以进行一些自由地定制了，比如设置连接超时，读取超时的毫秒数，以及服务器希望得到的一些消息头等。这部分内容根据自己的实际情况进行编写，示例写法如下：
+```
 	      connection.setConnectionTimeout(8000);
 	      connection.setReadTimeout(8000);
-	 之后再调用getInputStream()方法就可以获取到服务器返回的输入流了，剩下的任务就是对输入流进行读取，如下所示：
+```
+　　之后再调用 getInputStream() 方法就可以获取到服务器返回的输入流了，剩下的任务就是对输入流进行读取，如下所示：
+```
 	      InoutStream in = connection.getInputStream();
-	 最后可以调用disconnect()方法将这个HTTP连接关闭掉，如下所示：
+```
+　　最后可以调用 disconnect() 方法将这个 HTTP 连接关闭掉，如下所示：
+```
 	      connection.disconnection();
-	 提交数据费服务器，只需要将HTTP请求的方法改成POST，并在获取输入流之前把要提交的数据写出即可。注意每条数据都要以键值对的形式存在，数据与数据之间用&符号隔开，比如说我们想要向服务器提交用户名和密码，就可以这样写：
+```
+　　提交数据给服务器，只需要将 HTTP 请求的方法改成 POST ，并在获取输入流之前把要提交的数据写出即可。注意每条数据都要以键值对的形式存在，数据与数据之间用 & 符号隔开，比如说我们想要向服务器提交用户名和密码，就可以这样写：
+```
 	      connection.setRequestMethod("POST");
 	      DataOutputStream out = new DataOutputStream(connection.getOutputStream());
 	      out.writeBytes("username=admin&password=123456");
-    4.HttpClient是Apache提供的HTTP网络访问接口，从一开始的时候就被引入到了Android API中。它可以完成和HttpURLcONNECTION几乎一模一样的效果，但两者之间的用法却又较大的差别。
-    5.HttpClient的用法：
-         首先你需要知道，HttpClient是一个接口，因此无法创建它的实例，通常情况下都会创建一个DefaultHttpClient的实例，如下所示：
+```
+
+4. HttpClient 是 Apache 提供的 HTTP 络访问接口，从一开始的时候就被引入到了 Android API 中。它可以完成和 HttpURLcONNECTION 几乎一模一样的效果，但两者之间的用法却又较大的差别。
+
+5. HttpClient的用法：
+　　首先你需要知道，HttpClient 是一个接口，因此无法创建它的实例，通常情况下都会创建一个 DefaultHttpClient 的实例，如下所示：
+```
 	      HttpClient httpClient = new DefaultHttpClient();
-	 接下来如果想要发起一条GET请求，就可以创建一个HttpGet对象，并传入目标的网络地址，然后调用HttpClient的execute()方法即可。
+```
+　　接下来如果想要发起一条 GET 请求，就可以创建一个 HttpGet 对象，并传入目标的网络地址，然后调用 HttpClient 的 execute() 方法即可。
+```
 	      HttpGet httpGet = new HttpGet("http://www.baidu.com");
 	      httpClient.execute(httpGet);
-	 如果是发起一条POSY请求会比GET稍微复杂一点，我们需要创建一个HttpPost对象，并传入目标的网络地址，如下所示：
+```
+　　如果是发起一条 POST 请求会比 GET 稍微复杂一点，我们需要创建一个 HttpPost 对象，并传入目标的网络地址，如下所示：
+```
 	      HttpPost httpPost = new HttpPost("http://www.baidu.com");
-	 然后通过一个NameValuePair集合来存放待提交的参数，并将这个参数集合传入到一个UrlEncodedFormEntity中，然后调用HttpPost的setEntity()方法将构建好的UrlEncodeFormEntity传入，如下所示：
+```
+　　然后通过一个 NameValuePair 集合来存放待提交的参数，并将这个参数集合传入到一个 UrlEncodedFormEntity 中，然后调用 HttpPost 的 setEntity() 方法将构建好的 UrlEncodeFormEntity 传入，如下所示：
+```
 	      List<NameValuePair> params = new ArrayList<NameValuePair>();
 	      params.add(new BasicNameValuePair("username","admin"));
 	      params.add(new BasicNameValuePair("password","123456"));
 	      UrlEncodedFromEntity entity = new UrlEncodedFormEntity(params, "utf-8");
 	      httpPost.setEntity(entity);
-	 接下来的操作就和HttpGet一样了，调用HttpClient的execute()方法，并将HttpPost对象传入即可：
+```
+　　接下来的操作就和 HttpGet 一样了，调用 HttpClient 的 execute() 方法，并将 HttpPost 对象传入即可：
+```
 	      httpClient.execute(httpPost);
-	 执行execute()方法之后会返回一个HttpResponse对象，服务器所返回的所有信息就会包含在这里面。通常情况下我们都会先取出服务器返回的状态码，如果等于200就说明请求和响应都成功了，如下所示：
+```
+　　执行 execute() 方法之后会返回一个 HttpResponse 对象，服务器所返回的所有信息就会包含在这里面。通常情况下我们都会先取出服务器返回的状态码，如果等于 200 就说明请求和响应都成功了，如下所示：
+```
 	      if (httpResponse.getStatusLine().getStatusCode == 200) {
 		//请求和响应都成功了
 	      }
-	 接下来在这个if判断的内部取出服务返回的具体内容，可以调用getEntity()方法获取到一个HttpEntity实例，然后再用EntityUtils.toString()这个静态方法将HttpEntity转换成字符串即可，如下所示：
+```
+　　接下来在这个 if 判断的内部取出服务返回的具体内容，可以调用 getEntity() 方法获取到一个 HttpEntity 实例，然后再用 EntityUtils.toString() 这个静态方法将 HttpEntity 转换成字符串即可，如下所示：
+```
 	      HttpEntity entity = httpResponse.getEntity();
 	      String response = EntityUtils.toString(entity);
-	 注意如果服务器返回的数据是带有中文的，直接调用EntityUtils.toString()方法进行转换会有乱码的情况出现，这个时候只需要在转换的时候讲字符集指定成utf-8就可以了，如下所示：
+```
+　　注意如果服务器返回的数据是带有中文的，直接调用 EntityUtils.toString() 方法进行转换会有乱码的情况出现，这个时候只需要在转换的时候将字符集指定成 utf-8 就可以了，如下所示：
+```
 	      String response = EntityUtil.toString(entity, "utf-8");
-    6.比起XML，JSON的主要优势在于它的体积更小，在网络上传输的时候可以更省流量。单缺点在于，它的与异性较差，看起来不如XML直观。
+```
+
+6. 比起 XML ，JSON 主要优势在于它的体积更小，在网络上传输的时候可以更省流量。但缺点在于，它的语义性较差，看起来不如 XML 直观。
 
 
 
