添加2019年计划完成进度与读书笔记的索引

--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -115,12 +115,19 @@
 	2. 绘画 4 副
 	3. 《代码整洁之道》 第十一章141-156 第十二章157-162 第十三章163-175 第十四章176-234
 
+**临时变更计划**
+1. 《代码整洁之道》阅读计划暂停，开始《深入理解 Java 虚拟机》 与 《Android 进阶之光 》 书籍的阅读。
+
 * 临时添加任务
 
 	1. 模拟内存不足的文章完成
 
+
 * 完成
 	1. 绘画一副。 2019/04/07
+	2. 《代码整洁之道》 第11章读书笔记完成。 2019/04/13
+	3. 绘画一副。 2019/04/14
+	4. 《深入理解 Java 虚拟机》第 1 章读书笔记完成。 2019/04/16
 
 
 
