修正知识总结

--- a/other/数据结构与算法知识目录.md
+++ b/other/数据结构与算法知识目录.md
@@ -17,6 +17,8 @@
 
 3. B+树
 
+
+
 #### 数据结构常见的一些问题
 1. 数据库的索引用的什么数据结构？
 2. 字符串、数组相关的（滑动窗口、双指针）
@@ -24,7 +26,7 @@
 4. 浏览器，输入 url 匹配，假设有一亿条 url 缓存，用什么数据结构匹配？
 5. 一个长度为 10 的 arraylist 和 linklist，在第五条插入，哪个更快？
 6. 一个arraylist，里面全部是int，将所有值是2的整数的节点删除
-
+7. 计算 View 树上所有 view 的数量，参数 ViewGroup ，补全空方法返回 view 数量->本质就是数据结构多叉树递归层序遍历+Android View 基本 api 调用（手写）
 
 ## 算法
 #### 算法的基本知识
