添加 Activity 启动流程的内容

--- a/other/平时积累.md
+++ b/other/平时积累.md
@@ -1,8 +1,10 @@
-# 平时积累博客
+# 平时积累
 
 1. [Kotlin 资源大全 - 学 Kotlin 看这一篇教程就够了](https://juejin.im/post/591dd9f544d904006c9fbb96?tdsourcetag=s_pctim_aiomsg)
 
-
+2. 查看源码用到的网址：
+http://androidxref.com/7.0.0_r1/
+http://androidxref.com/7.0.0_r1/xref/ 代码目录
 
 
 
