删除不需要的文章

--- a/DataStructureAndAlgorithms/关于数据结构与算法的常见面试题，大家一起来看呀.md
+++ b/DataStructureAndAlgorithms/关于数据结构与算法的常见面试题，大家一起来看呀.md
@@ -1,5 +1,6 @@
-# 数据结构与算法知识目录
+# 关于数据结构的常见面试题，大家一起来看呀
 
+> 前言：本文中提到的面试题都是从网络上查询出来的，至于面试题的解答只是本人的一些看法，如果有解答不对的地方希望大家提出会留言，也欢迎留言没有提到的面试问题。
 
 ## 数据结构
 
@@ -43,11 +44,3 @@
 4. 猴子偷桃问题代码实现
 5. 手写算法，二维数组，每一行，每一列都是升序，找出某数的下标，没有输出[-1,-1]，最好的时间复杂度是m+n（行数+列数）
 6. 如何判断一个字符是回文字符？
-
-
-
-
-
-
-
-
