--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -132,6 +132,16 @@
 	6. 《Activity 关于生命周期一些问题的实践验证》文章完成。 2019/04/23
 	7. 《Activity 之生命周期》文章完成。2019/04/23
 	8. 《Activity 之使用》文章完成。 2019/04/23
+	9. 《Android 进阶之光》第 1 章读书笔记完成。 2019/04/26
+	10. 《Android 进阶加密》第 1 章读书笔记完成。2019/04/28
 
+#### 2019 年 5 月
 
+* 计划
+
+	1. 根据面试题输出文章
+	2. 绘画 3 副
+	3. 《深入理解 Java 虚拟机》、《Android 进阶之光》、《Android 进阶加密》部分阅读
+
+* 完成
 
