添加BroadcastReceiver的知识

--- a/Android/后续.md
+++ b/Android/后续.md
@@ -15,5 +15,5 @@ https://www.2cto.com/kf/201802/721726.html
 3. 常用的测试工具
 
 
-
-
+## 进阶高级工程师
+https://github.com/jinguangyue/Android-Advanced-Interview
