增加内存优化知识

--- a/Android/optimize/内存优化之内存泄漏.md
+++ b/Android/optimize/内存优化之内存泄漏.md
@@ -53,6 +53,66 @@
 　　通常情况下，GC 发生的时候，所有的线程都是会被暂停的。执行 GC 所占用的时间和它发生在哪一个 Generation 也有关系，Young Generation 中的每次 GC 操作时间是最短的，Old Generation 其次，Permanent Generation 最长。执行时间的长短也和当前 Generation 中的对象数量有关。
 
 #### 限制应用的内存
+* 为了整个 Android 系统的内存控制需要，Android 系统为每一个应用程序都设置了一个硬性的 Dalvik Heap Size 最大限制阈值，这个阈值在不同的设备上会因为 RAM 大小不同而各有差异。如果你的应用占用内存空间已经接近这个阈值，此时再尝试分配内存的话，很容易引起 OutOfMemoryError 的错误。
+* ActivityManager.getMemoryClass() 可以用来查询当前应用的 Heap Size 阈值，这个方法会返回一个整数，表明你的应用的 Heap Size 阈值是多少 Mb(megabates)。
+
+#### 应用切换操作
+* Android 系统并不会在用户切换应用的时候做交换内存的操作。Android 会把那些不包含 Foreground 组件的应用进程放到 LRU Cache 中。例如，当用户开始开启了一个应用，系统会为它创建一个进程，但是当用户离开这个应用，此进程并不会立即被销毁，而是会被放到系统的 Cache 当中，如果用户后台再切换回到这个应用，此进程就能够被马上完整的恢复。从而实现应用的快速切换。
+* 如果你的应用中有一个被缓存的进程，这个进程会占用一定的内存空间，它会对系统的整体性能有影响。因此当系统开始进入 Low Memory 的状态时，它会由系统根据 LRU 的规则与应用的优先级，内存占用情况以及其他因素的影响综合评估之后决定是否被杀死。
+
+## OOM(OutOfMemory)
+　　使用 getMemoryClass() 的方法可以得到 Dalvik Heap 的阈值。
+
+#### 查看内存使用情况
+* 使用命令 `adb shell dumpsys meminfo -a 包名`。
+* 通过 Android Studio 的 Memory Monitor 查看内存中 Dalvik Heap 的实时变化。
+
+#### 发生 OOM 的条件
+　　关于 Native Heap、Dalvik Heap、Pss 等内存管理机制比较复杂，通过不同的内存分配方式（malloc/mmap/JNIEnv/etc）对不同的对象（bitmap,etc）进行操作会因为 Android 系统版本的差异而产生不同的行为，对 Native Heap 与 Dalvik Heap 以及 OOM 的判断条件都会有所影响。在 2.x 的系统上，可以看到 Heap Size 的 total 值明显超过了通过 getMemoryClass() 获取到的阈值而不会发生 OOM 的情况，那么针对 2.x 与 4.x 的 Android 系统，到底是如何判断会发生 OOM 呢？
+
+* Android 2.x 系统 GC LOG 中的 dalvik allocated + external allocated + 新分配的大小 >= getMemoryClass() 值的时候就会发生 OOM。例如，假设有这么一段 Dalvik 输出的 GC LOG：GC_FOR_MALLOC free 2k,13% free 32586K/37455K,external 8989K/10356K,paused 20ms,那么 32586+8989+（新分配）=65550>64M时，就会发生 OOM。
+* Android 4.x 系统 Android 4.x 的系统废除了 external 的计数器，类似 bitmap 的分配改到 dalvik 的 java heap 中申请，只要 allocated + 新分配的内存 >= getMemoryClass() 的时候就会发生 OOM。
+
+#### 如何避免 OOM 总结
+　　可以从四个方面着手，首先是减少对象的内存占用，其次是内存对象的重复利用，然后是避免对象的内存泄漏，最后是内存使用策略优化。
+
+##### 减少对象的内存占用
+　　避免 OOM 的第一步就是要尽量减少新分配出来的对象占用内存的大小，尽量使用更加轻量的对象。
+
+###### 1.使用更加轻量的数据结构
+　　例如，可以考虑使用 ArrayMap/SparseArray 而不是 HashMap 等传统数据结构，HashMap 相比起 Android 系统专门为移动操作系统编写的 ArrayMap 容器，大多数情况下，都显示效率低下，更占内存。通常的 HashMap 的实现方式更加消耗内存，因为它需要一个额外的实例对象来记录 Mapping 操作。另外，SparseArray 更加高效在于它们避免了对 key 与 value 的 autobox 自动装箱，并且避免了装箱后的解箱。
+
+###### 2.避免在 Android 里面使用 Enum
+　　Android 官方培训课程提到过“Enum often require more than twice as much memory as static constants.You should strictly avoid using enums on Android.”，所以请避免在 Android 里面使用到枚举。
+
+###### 3.减少 Bitmap 对象的内存占用
+　　Bitmap 是一个极容易消耗内存的大胖子，减少创建出来的 Bitmap 的内存占用是很重要的，通常来说有下面 2 个措施：
+* inSampleSize：缩放比例，在把图片载入内存之前，需要先计算出一个合适的缩放比例，避免不必要的大图载入。
+* decode format：解码格式，选择 ARGB_8888/RBG_565/ARGB_4444/ALPHA_8，存在很大差异。
+
+###### 4.使用更小的图片
+　　在设计给资源图片的时候，需要特别留意这张图片是否存在可以压缩的空间，是否可以使用一张更小的图片。尽量使用更小的图片不仅仅可以减少内存的使用，还可以避免出现大量的 InflationException。假设有一张很大的图片被 XML 文件直接引用，很有可能在初始化视图的时候就会因为内存不足而发生 InflationException，这个问题的根本原因其实是发生了 OOM。
+
+##### 内存对象的重复利用
+　　大多数对象的复用，最终实施的方案都是利用对象池技术，要么是在编写代码的时候显式的在程序里面去创建对象池，然后处理好复用的实现逻辑，要么就是利用系统框架既有的某些复用特性达到减少对象的重复创建，从而减少内存的分配与回收。
+
+###### 1.复用系统自带资源
+　　Android 系统本身内置了很多的资源，例如字符串/颜色/图片/动画/样式以及简单布局等等，这些资源都可以在应用程序中直接引用。这样做不仅仅可以减少应用程序的自身负重，减少 APK 的大小，另外还可以一定程度上减少内存的开销，复用性更好。但是也有必要留意 Android 系统的版本差异性，对那些不同系统版本上表现存在很大差异，不符合需求的情况，还是需要应用程序自身内置进去。
+
+###### 2.注意在 ListView/GridView 等出现大量重复子组件的视图里面对 ConvertView 的复用
+　　使用 ListView 与 GirdView 注意组件的复用，减少组件的创建。
+
+###### 3.Bitmap 对象的复用
+* 在 ListView 与 GirdViwe 等显示大量图片的空间里面需要使用 LRU 的机制来缓存处理好的 Bitmap。
+
+
+
+
+
+
+
+
+
 
 
 
