--- a/Android/optimize/内存优化之内存泄漏.md
+++ b/Android/optimize/内存优化之内存泄漏.md
@@ -104,16 +104,135 @@
 
 ###### 3.Bitmap 对象的复用
 * 在 ListView 与 GirdViwe 等显示大量图片的空间里面需要使用 LRU 的机制来缓存处理好的 Bitmap。
+* 利用 inBitmap 的高级特性提高 Android 系统在 Bitmap 分配和释放执行效率上的提升（3.0 以及 4.4 以后存在一些使用限制上的差异）。使用 inBitmap 属性可以告知 Bitmap 解码器去尝试使用已经存在的内存区域，新解码的 bitmap 会尝试去使用之前那张 bitmap 在 heap 中所占据的 pixel data 内存区域，而不是去问内存重新申请一块区域来存放 bitmap。利用这种特性，即使是上千张的图片，也只会仅仅只需要占用屏幕所能显示的图片数量的内存大小。
 
+　　使用 inBitmap 需要注意几个限制条件：
+* 在 SDK 11 -> 18 之间，重用的 bitmap 大小必须是一致的，例如给 inBitmap 复制的图片大小为 100-100，那么新申请的 bitmap 必须也为 100-100 才能够被重用。从 SDK 19 开始，新申请的 bitmap 大小必须小于或等于已经赋值过的 bitmap 大小。
+* 新申请的 bitmap 与旧的 bitmap 必须有相同的解码格式，例如大家都是 8888 的，如果前面的 bitmap 是 8888，那么就不能支持 4444 与 565 格式的 bitmap 了。可以创建一个包含多种典型可重用 bitmap 的对象池，这样后续的 bitmap 创建都能够找到合适的“模板”去进行重用。
 
+　　在 2.x 的系统上，尽管 bitmap 是分配在 native 层，但是还是无法避免被计算到 OOM 的引用计数器里面。不少应用会通过反射 BitmapFactory.Options 里面的 inNativeAlloc 来达到扩大使用内存的目的，但是如果这么做，对系统整体会造成一定的负面影响，建议谨慎采纳。
 
+###### 4.避免在 onDraw 方法里面执行对象的创建
+　　类似 onDraw 等频繁调用的地方，一定需要注意避免在里面做创建对象的操作，因为它会迅速增加内存的使用，而且很容易引起频繁的 gc，甚至是内存抖动。
 
+###### 5.StringBuilder
+　　在有些时候，代码中会需要使用到大量的字符串拼接的操作，这种时候有必要考虑使用 StringBuilder 来替代频繁的“+”。
 
+##### 避免对象的内存泄漏
+　　内存对象的泄漏，会导致一些不再使用的对象无法及时释放，这样一方面占用了宝贵的内存空间，很容易导致后续需要分配内存的时候，空闲空间不足而出现 OOM。显然，这还使得每级 Generation 的内存区域可用空间变小，gc 就会更容易被触发，容易出现内存抖动，从而引起性能问题。
 
+###### 注意 Activity 的泄漏
+　　通常来说，Activity 的泄漏是内存泄漏里面最严重的问题，它占用的内存多，影响面广，需要特别注意以下联众情况导致的 Activity 泄漏：
 
+* 内部类引用导致 Activity 的泄漏
+　　最典型的场景是 Handler 导致的 Activity 泄漏，如果 Handler 中有延迟的任务或者是等待执行的任务队列过长，都有可能因为 Handler 继续执行而导致 Activity 发生泄漏。此时的引用关系链是 Looper -> MessgaQueue -> Handler -> Activity。为了解决这个问题，可以在 UI 退出之前，执行 remove Handler 消息队列中的消息与 runnable 对象，或者是使用 Static + WeakReference 的方式来达到断开 Handler 与 Activity 之间存在引用关系的目的。
 
+* Activity Context 被传递到其他实例中，这可能导致自身被引用而发生泄漏。
+　　内部类引起的泄漏不仅仅会发生在 Activity 上，其他任何内部类出现的地方，都需要特别留意！可以考虑尽量使用 static 类型的内部类，同时使用 WeakReference 的机制来避免因为相互引用而出现的泄漏。
 
+###### 考虑使用 Application Context 而不是 Activity Context
+　　对于大部分非必须使用 Activity Context 的情况（Dialog 的 Context 就必须是 Activity COntext），都可以考虑使用 Application Context 而不是 Activity 的 Context，这样就避免不经意的 Activity 泄漏。
 
+###### 注意临时 Bitmap 对象的及时回收
+　　虽然在大多数情况下，会对 Bitmap 增加混村机制，但是在某些时候，部分 Bitmap 是需要及时回收的。例如临时创建的某个相对比较大的 bitmap 对象，在经过变换得到新的 bitmap 对象之后，应该尽快回收原始的 bitmap，这样能够更快释放原始 bitmap 所占用的空间。
+
+　　需要特别留意的是 Bitmap 类里面提供的 createBitmap() 方法，这个方法返回的 bitmap 有可能和 source bitmap 是同一个，在回收的时候，需要特别检查 source bitmap 与 return bitmap 的引用是否相同，只有在不同的时候，才能够执行 source bitmap 的 recycler 方法。
+
+###### 注意监听器的注销
+　　有时候，为了提高对象的复用性把某些对象放到缓存容器中，可是如果这些对象没有及时从容器中清楚，也是有可能导致内存泄漏的。例如，针对 2.3 的系统，如果把 drawable 添加到缓存容易，因为 drawable 与 View 的强引用，很容易导致 activity 发生泄漏。而从 4.0 开始，就不存在这个问题。解决这个问题，需要对 2.3 系统上的缓存 drawable 做特殊处理，处理引用解绑的问题，避免泄漏的情况。
+
+###### 注意 WebView 的泄漏
+　　Android 中的 WebView 存在很大的兼容问题，不仅仅是 Android 系统版本的不同产生很大的差异，另外不同的厂商出货的 ROM 里面 WebView 也存在着很大的差异。更严重的标准的 WebView 存在内存泄漏的问题，所以通常根治这个问题的方法是为 WebView 开启另外一个进程，通过 AIDL 与主进程进行通信，WebView 所在的进程可以根据业务的需要选择合适的时机进行销毁，从而达到内存的完整释放。
+
+###### 注意 Cursor 对象是否及时关闭
+　　在程序中经常会进行查询数据库的操作，但时常会存在不小心使用 Cursor 之后没有及时关闭的情况。这些 Cursor 的泄漏，反复多次出现的话会对内存管理产生很大的负面影响，需要谨记对 Cursor 随想的及时关闭。
+
+##### 内存使用策略优化
+
+###### 1.谨慎使用 large heap
+　　Android 设备根据硬件与软件的设置差异而存在不同大小的内存空间，他们为应用程序设置了不同大小的 Heap 限制阈值。可以通过调用 getMemoryClass() 来获取应用的可用 Heap 大小。在一些特殊的情景下，可以通过 getLargeMemoryClass() 来获取到这个更大的 heap size 阈值。然而，声明得到更大 Heap 阈值的本意是为了一小部分会消耗大量 RAM 的应用（例如一个大图片的编辑应用）。不要轻易的因为需要使用更多的内存而去请求一个大的 Heap Size。只有当清楚的知道哪里会使用大量的内存并且知道为什么这些内存必须被保留时才去使用 large heap。因此请谨慎使用 large heap 属性。使用额外的内存空间会影响系统整体的用户体验，并且会使得每次 gc 的运行时间更长。在任务切换时，系统的性能会大打折扣。另外，large heap 并不一定能够获取到更大的 heap，在某些有严格限制的机器上，large heap 的大小和通常的 large size 是一样的。因此即使申请了 large heap，还是应该通过执行 getMemoryClass() 来检查实际获取到的 heap 大小。
+
+###### 2.综合考虑设备内存阈值与其他因素设计合适的缓存大小
+　　例如，在设计 ListView 或者 GridView 的 Bitmap LRU 缓存的时候，需要考虑的点有：
+* 应用程序剩下了多少可用的内存空间？
+* 有多少图片会被一次呈现倒屏幕上？有多少图片需要事先缓存好以便快速滑动时能立即显示到屏幕？
+* 设备的屏幕大小与密度是多少？一个 xhdpi 的设备会比 hdpi 需要一个更大的 Cache 来 hold 住同样数量的图片。
+* 不同的页面针对 Bitmap 的设计的尺寸与配置是什么，大概会花费多少内存？
+* 页面图片被访问的频率？是否存在其中的一部分比其他的图片具有更高的访问频繁？如果是，也许想要保存那些最长访问的到内存中，或者为不同组别的位图（按访问频率分组）设置多个 LruCache 容器。
+
+###### 3.onLowMemory() 与 onTrimMemory()
+　　Android 用户可以随意在不同的应用之间进行快速切换。为了让 background 的应用能够迅速的切换到 forground，每一个 background 的应用都会占用一定的内存。Android 系统会根据当前的系统的内存使用情况，决定回收部分 background 的应用内存。如果 background 的应用从暂停状态直接被恢复到 foreground，能够获得较快的恢复体验，如果 background 应用是从 Kill 的状态进行恢复，相比之下就显得稍微有点慢。
+
+* onLowMemory()：Android 系统提供了一些回调来通知当前应用的内存使用情况，通常来说，当所有的 background 应用都被 kill 掉的时候，forground 应用会收到 onLowMemory() 的回调，在这种情况下，需要尽快释放当前应用的非必须的内存资源，从而确保系统能够继续稳定运行。
+
+* onTrimMemory(int)：Android 系统从 4.0 开始还提供了 onTrimMemory() 的回调，当系统内存达到某些条件的时候，所有正在运行的应用都会收到这个回调，同时在这个回调里面会传递以下的参数，代表不同的内存使用情况，收到 onTrimMemory() 回调的时候，需要根据传递的参数类型进行判断，合理的选择释放自身的一些内存占用，一方面可以提高系统的整体运行流畅度，另外也可以避免自己被系统判断为有限需要杀死的应用。
+
+　　各种不同的回调参数：
+　　**TRIM_MEMORY_UI_HIDDEN：**你的应用程序的所有 UI 界面被隐藏了，即用户点击了 Home 键或者 Back 键退出应用，导致应用的 UI 界面完全不可见。这个时候应该释放一些不可见的时候非必须的资源。
+
+　　当程序正在前台运行的时候，可能会接收到从 onTrimMemory() 中返回的下面的纸之一：
+
+　　**TRIM_MEMORY_RUNNINF_MODERATE：**应用正在运行并且不会被列为可杀死的，但是设备此时正运行于低内存状态下，系统开始触发杀死 LRU Cache 中的 Process 的机制。
+　　**TRIM_MEMORY_RUNNING_LOW：**应用正在运行且没有被列为可杀死的，但是设备正在运行于更低内存的状态下，应该释放不用的资源用来提升系统性能。
+　　**TRIM_MEMORY_RUNNING_CRITICAL：**应用仍在运行，但是系统已经把 LRU Cache 中的大多数进程都已经杀死，因此应该立即释放所有非必须的资源。如果系统不能回收到足够的 RAM 数量，系统将会清楚所有的 LRU 缓存中的进程，并且开始杀死那些之前被认为不应该杀死的进程，例如那个包含了一个运行状态 Service 的进程。
+
+　　当应用进程推到后台正在被 Cached 的时候，可能会接收到从 onTrimMemory() 中返回的下面的值之一：
+　　**TRIM_MEMORY_BACKGROUND：**系统正运行于低内存状态并且你的进程正处于 LRU 缓存名单中最不容易杀掉的位置。尽管你的应用进程并不是处于被杀掉的高危险状态，系统可能已经开始杀掉 LRU 缓存中的其他进程了。应该释放那些容易恢复的资源，以便于进程可以保留下来，这样当用户会退到你的应用的时候才能够迅速恢复。
+　　**TRIM_MEMORY_MODERATE：**系统正运行于低内存状态，并且你的进程已经接近 LRU 名单的中部位置。如果系统开始变得更加内存紧张，进程是有可能被杀死的。
+　　**TRIM_MEMORY_COMPLETE：**系统正运行于低内存的状态并别进程正处于 LRU 名单中最容易被杀掉的位置。应该释放任何不影响应用恢复状态的资源。
+
+* 因为 onTrimMemory() 的回调是在 API 14 才被加进来的，对于老的版本，可以使用 onLowMemory() 回调来进行兼容。onLowMemory 相当于 TRIM_MEMORY_COMPLETE。
+* 请注意：当系统开始清除 LRU 缓存中的进程时，虽然它首先按照 LRU 的顺序来执行操作，但是它同样会考虑进程的内存使用量以及其他因素。占用越少的进程越容易被留下来。
+
+###### 4.资源文件需要选择合适的文件夹进行存放
+　　hdpi/xhdpi/xxhdpi 等等不同 dpi 的文件夹下的图片在不同的设备上会经过 scale 的处理。例如只在 hdpi 的目录下放置了一张 100x100 的图片，那么根据换算关系，xxhdpi 的手机去引用那张图片就会被拉伸到 200x200。需要注意到在这种情况下。内存占用是会显著提高的。对于不希望被拉伸的图片，需要放到 assets 或者 nodpi 的目录下。
+
+###### 5.Try catch 某些大内存分配的操作
+　　在某些情况下，需要实现评估那些可能发生 OOM 的代码，对于这些可能发生 OOM 的代码，加入 catch 机制，可以考虑在 catch 里面尝试一次降级的内存分配操作，例如 decode bitmap 的时候，catch 到 OOM，可以尝试把采样比例再增加一倍之后，再次尝试 decode。
+
+###### 6.谨慎使用 static 对象
+　　因为 static 的生命周期很长，和应用的进程保持一致，使用不当很可能导致对象泄漏，在 Android 中应该谨慎使用 static 对象。
+
+###### 7.特别留意单例对象中不合理的持有
+　　虽然单例模式简单实用，提供了很多便利性，但是因为单例的生命周期和应用保持一致，使用不合理很容易出现持有对象的泄漏。
+
+###### 8.珍惜 Services 资源
+　　如果应用需要在后台使用 Service，除非它被触发并执行一个任务，否则其他时候 Service 都应该是停止状态。另外需要注意当这个 service 完成任务之后因为停止 Service 失败而引起的内存泄漏。当启动一个 Service，系统会倾向为了保留这个 Service 而一直保留 Service 所在的进程。这使得进程运行代价很高，因为系统没有办法把 Service 所占用的 RAM 控件腾出来让给其他组件，另外 Service 还不能被 Paged out。这减少了系统能够存放到 LRU 缓存当中的进程数量，它会影响应用之间的切换效率，甚至会导致系统内存使用不稳定，从而无法继续包吃住所有目前正在运行的 service。建议使用 IntentService，它会在处理完交代给它的任务之后尽快结束自己，
+
+###### 9.优化布局层次，减少内存消耗
+　　越扁平化的视图布局，占用的内存就越少，效率越高。需要尽量保证布局足够扁平化，当使用系统提供的 View 无法实现足够扁平化的时候考虑使用自定义 View 来达到目的。
+
+###### 10.谨慎使用“抽象”编程
+　　很多时候，开发者会使用抽象类作为“好的编程实践”，因为抽象能够提升代码的灵活性与可维护性。然而，抽象会导致一个显著的额外内存开销：他们需要同等量的代码用于可执行，那些代码会被 mapping 到内存中，因此如果抽象没有显著的提升效率，应该尽量避免它们。
+
+###### 11.使用 nano protobufs 序列化数据
+　　Protocal buffers 是由 Google 为序列化结构数据而设计的，一种语言无关，平台无关，具有良好的扩展性。类似 XML，却比 XML 更加轻量、快速、简单。如果需要为数据实现序列化与写意画，建议使用 nano ptotobufs。
+
+###### 12.谨慎使用依赖注入框架
+　　使用类似 Guice 或者 RoboGuice 等框架注入代码，在某种程度上可以简化代码。使用 RoboGuice 之后，代码是简化了不少。然而，那些注入框架会通过扫毛代码执行许多初始化的操作，这会导致代码需要大量的内存空间来 mapping 代码，而且 mapped pages 会长时间的被保留在内存中。除非真的很有必要，建议谨慎使用这种技术。
+
+###### 13.谨慎使用多进程
+　　使用多进程可以把应用中的部分组件运行在单独的进程中，这样可以扩大应用的内存占用范围，但是这个技术必须谨慎使用，绝大数应用都不应该贸然使用多进程，一方面是因为使用多进程会使得代码逻辑更加复杂，另外如果使用不当，它可能反而会导致显著增加内存。当应用需要运行一个常驻后台的任务，而且这个任务并不轻量，可以考虑使用这个技术。
+
+　　一个典型的例子是创建一个可以长时间后台播放的 Music Player。如果整个应用都运行在一个进程中，当后台播放的时候，前台的那些 UI 资源也没有办法得到释放。类似这种的应用可以切分成 2 个进程：一个用来操作 UI，另外一个给后台的 Service。
+
+###### 14.使用 ProGuard 来剔除不需要的代码
+　　ProGuard 能够通过移除不需要的代码、重命名类、域与方法等等，对代码进行压缩、优化与混淆。使用 Proguard 可以使得你的代码更加紧凑，这样能够减少 mapping 代码所需要的内存空间。
+
+###### 15.谨慎使用第三方 libraries
+　　很多开源的 library 代码都不是为移动网络环境而编写的，如果运用在移动设备上，并不一定适合。即使是针对 Android 而设计的 library，也需要特别谨慎，特别是在不知道引入的 library 具体做了什么事情的时候。例如，其中一个 library 使用的是 nano protobufs，而另外一个使用的是 micro protobufs。这样一来，在应用里面就有 2 种 protobuf 的实现方式。这样类似的冲突还可能发生在输出日志、加载图片、缓存等等模块里面。另外不要为了 1 个或者 2 个功能而导入整个 library，如果没有一个合适的库与需要相吻合，应该考虑自己去实现，而不是导入一个大而全的解决方案。
+
+###### 16.考虑不同的实现方式来优化内存占用
+　　在某些情况下，设计的某个方案能够快读实现需求，但是这个方案却可能在内存占用上表现的效率不够好，就需要考虑其他实现方式来优化内存的占用。
+
+* 设计风格很大程度上会影响到程序的内存与性能，相对来说，如果大量使用类似 Material Design 的风格，不仅安装包可以变小，还可以减少内存的占用、渲染性能与加载性能都会有一定的提升。
+
+* 内存优化并不就是说程序占用的内存越少就越好，如果因为想要保持更低的内存占用，而频繁触发执行 gc 操作，在某种程序上反而会导致应用性能整体有所下降，这里需要综合考虑做一定的权衡。
+
+* Android 的内存优化设计的知识面还有很多：内存管理的细节，垃圾回收的工作原理，如何查找内存泄漏等等都可以展开。OOM 是内存优化当中比较突出的一点，尽量减少 OOM 的概率对内存优化有着很大的意义。
+
+## 什么是内存抖动
+　　内存抖动是指在短时间内有大量的对象被创建或者被回收的现象，内存抖动出现原因主要是频繁在循环里创建对象，导致大量对象在短时间内被创建，由于新对象要占用内存空间而且很频繁，如果一次或者两次在循环里创建对象对内存影响不大，不会造成严重内存抖动这样可以接受也不可避免，频繁的话就会内存抖动严重，内存抖动的影响是如果抖动很频繁，会导致垃圾回收机制频繁运行，短时间内产生大量对象，需要大量内存，而且还是频繁抖动，就可能会需要回收内存以用于产生对象，垃圾回收机制就自然会频繁运行了。所以频繁内存抖动会导致垃圾回收频繁运行。
 
 
 ## 参考文章
