--- a/项目信息/项目信息收集.md
+++ b/项目信息/项目信息收集.md
@@ -2,7 +2,10 @@
 
 1. https://github.com/simplezhli/flutter_deer
 flutter-deer 是 flutter 练习项目。包括完整 UI 设计图，更贴近真实项目的练习。
-
+2. https://mp.weixin.qq.com/s/b1o6UPPx-abnRFgmU6Tv4Q Flutter 开发体验初探
+3. https://mp.weixin.qq.com/s/OYcY_jJzCn3yYZk0bghyxA
+编写第一个 Flutter 应用（第一篇）
+4. https://mp.weixin.qq.com/s/Utx2HiAdxqdrJLWq5-DASw 编写第一个 Flutter 应用（第二篇）
 
 ## 视频
 1.https://mp.weixin.qq.com/s/BOkaNcPQWKkeAS1it3aE-w
