规划本月计划

--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -144,4 +144,22 @@
 	3. 《深入理解 Java 虚拟机》、《Android 进阶之光》、《Android 进阶加密》部分阅读
 
 * 完成
+	大量输出文章
+
+
+#### 2019 年 6 月 ~ 2019 年 7 月
+*	项目要出版本，忙于工作。
+*	打算出一个多媒体的应用，研究视频的处理。
+*	画了很多画，感觉又找到了忙碌有目标的幸福，绘画开始算入门了吧，要继续坚持加油哦。
+
+#### 2019 年 8 月
+* 计划
+	1. 视频编辑应用继续完成（计划在9月完成）
+	2. 《Java多线程编程核心技术》书籍阅读完毕。
+	3. 记录文章继续输出。
+	4. 继续绘画
+
+* 完成
+
+
 
