--- a/项目信息/剪辑助理项目/第二天：项目创建.md
+++ b/项目信息/剪辑助理项目/第二天：项目创建.md
@@ -186,6 +186,33 @@ public class LocalVideoActivity extends Activity {
 }
 ```
 
+#### 2.3 AndroidManifest.xml 文件
+```
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.zhangmiao.clipassistant">
+
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".Activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Activity.LocalVideoActivity"/>
+        <activity android:name=".Activity.ShootVideoActivity"/>
+    </application>
+
+</manifest>
+```
+
 ## 3. 拍摄视频的实现
 　　拍摄视频就写了一个 ShootVideoActivity 的类。
 ```
