--- a/项目信息/项目信息收集.md
+++ b/项目信息/项目信息收集.md
@@ -16,6 +16,9 @@ Android 音视频系列：视频容器操作篇--mp4 容器打包实现
 
 5.https://android.ctolib.com/microshow-RxFFmpeg.html RxFFmpeg 是一个适用于 Android 平台的音视频编辑、视频剪辑的快速处理框架
 
+6.https://blog.csdn.net/da_caoyuan/article/details/87984877 Android 获取本地视频+视频裁剪+视频录制
+
+
 ## 音频
 
 
