--- a/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
+++ b/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
@@ -8,7 +8,7 @@
 	关键字 volation 与 synchronized 的区别及使用情况。
 
 ## 2.1 synchronized 同步方法
-　　
+　　"费县陈安全"其实会在多个线程对同一个对象中的实例变量进行并发访问时发生，产生的后果就是“脏读”，也就是取到的数据其实是被更改过的。而“线程安全”就是以获得的实例变量的值是经过同步处理的，不会出现脏读的现象。
 
 
 #### 2.1.1 方法内的变量为线程安全
