--- a/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
+++ b/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
@@ -38,24 +38,36 @@
 　　A 线程先持有 object 对象的 Lock 锁，B 线程如果在这时调用 object 对象中的 synchronized 类型的方法则需要等待，也就是同步。
 
 #### 2.1.5 脏读
-　　
+　　虽然在赋值时进行了同步，但在取值时有可能出现一些意想不到的意外，这种情况就是脏读（dirtyRead）。发生脏读的情况是在读取实例变量时，此值已经被其他线程更改过了。
+
+　　脏读是通过 synchronized 关键字解决的。
+
+　　当 A 线程调用 anyObject 对象加入 synchronized 关键字的 X 方法时，A 线程就获得了 X 方法锁，更准确地讲，是获得了对象的锁，所以其他线程必须等 A 线程执行完毕才可以调用 X 方法，但 B 线程可以随意调用其他的非 synchronized 同步方法。
+
+　　当 A 线程调用 anyObject 对象加入 synchronized 关键字的 X 方法时，A 线程就获得了 X 方法所在对象的锁，所以其他线程必须等 A 线程执行完毕才可以调用 X 方法，而 B 线程如果调用声明了 synchronized 关键字的非 X 方法时，必须等 A 线程将 X 方法执行完，也就是释放对象锁后才可以调用。
+
+　　脏读一定会出现操作实例变量的情况下，这就是不同线程“争抢”实例变量的结果。
 
 #### 2.1.6 synchronized 锁重入
-　　
+　　关键字 synchronized 拥有锁重入的功能，也就是在使用 synchronized 时，当一个线程得到一个对象锁后，再次请求此对象锁时是可以再次得到该对象的锁的。这也证明在一个 synchronized 方法/块的内部调用本类的其他 synchronized 方法/块时，是永远可以得到锁的。
 
+　　“可重入锁”的概念是：自己可以造次获取自己的内部锁。
+
+　　可重入锁也支持在父子类继承的环境中。
+
+　　当存在父子类继承关系时，子类是完全可以通过“可重入锁”调用父类的同步方法的。
 
 #### 2.1.7 出现异常，锁自动释放
-　　
+　　当一个线程执行的代码出现异常时，其所持有的锁会自动释放。
 
 #### 2.1.8 同步不具有继承性
-　　
-
+　　同步不可以继承。
 
 ## 2.2 synchronized 同步语句块
-　　
+　　用关键字 synchronized 声明方法在某些情况下是有弊端的，比如 A 线程调用同步方法执行一个长时间的任务，那么 B 线程则必须等待比较长时间，这样的抢矿下可以使用 synchronized 同步语句块来解决。
 
 #### 2.2.1 synchronized 方法的弊端
-　　
+　　弊端就是 A 线程调用同步方法执行一个长时间的任务，那么 B 线程则必须等待比较长时间。
 
 
 #### 2.2.2 synchronized 同步代码块的使用
