--- a/项目信息/剪辑助理项目/第四天：本地视频列表显示.md
+++ b/项目信息/剪辑助理项目/第四天：本地视频列表显示.md
@@ -2,12 +2,36 @@
 
 　　今天完成的功能主要是本地视频的列表显示。
 
-## 1. 列表的实现
+## 1. 概述
+　　在第三天中已经拿到了本地视频的数据，今天主要是将拿到的数据显示成列表的形式。
+
+　　列表的实现选择了 GridView 组件，图片的实现使用了开源库 Glide。
+
+## 2. GridView 的使用
+
+#### 2.1 GridView 是什么
+
+　　GlideView 网格视图是按照行列的方式来显示内容的，一般用于显示图片等内容，实现九宫格图，GridView 是首选，也是最简单的。
+
+#### 2.2 GridView 的常用属性
+```
+android:numColumns="4"--------列数
+android:columnWidth="10dp"-------每列的宽度，也就是Item的宽度
+android:verticalSpacing="10dp"----------垂直边距
+android:horizontalSpacing="10dp"-------水平边距
+```
+
+#### 2.3 GridView 实现数据加载的步骤
 
 
+## 3. Glide 的使用
+
+
+
+## 4. 本地视频列表的实现
 
 
 ## 总结
-　　今天就写这么多，本地视频的列表就写好了，接下来会写视频的播放了。
+　　今天就写这么多，本地视频的列表就写好了，接下来就要写视频的播放了。
 
 
