--- a/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
+++ b/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
@@ -67,24 +67,22 @@
 　　用关键字 synchronized 声明方法在某些情况下是有弊端的，比如 A 线程调用同步方法执行一个长时间的任务，那么 B 线程则必须等待比较长时间，这样的抢矿下可以使用 synchronized 同步语句块来解决。
 
 #### 2.2.1 synchronized 方法的弊端
-　　弊端就是 A 线程调用同步方法执行一个长时间的任务，那么 B 线程则必须等待比较长时间。
-
+　　弊端就是 A 线程调用同步方法执行一个长时间的任务，那么 B 线程则必须等待比较长时间。解决这样的问题可以使用 synchronized 同步块。
 
 #### 2.2.2 synchronized 同步代码块的使用
-　　
+　　当两个并发线程访问同一个对象 object 中的 synchronized(this) 同步代码块中，一段时间内只能有一个线程被执行，另一个线程必须等待当前线程执行完这个代码块以后才能执行该代码块。
 
 #### 2.2.3 用同步代码块解决同步方法的弊端
-　　
+　　当一个线程访问 object 的一个 synchronized 同步代码块时，另一个线程仍然可以访问该 object 对象中的非 synchronized(this) 同步代码块。
 
 #### 2.2.4 一半异步，一半同步
-　　
+　　不在 synchronized 块中就是异步执行，在 synchronized 块中就是同步执行。
 
 #### 2.2.5 synchronized 代码块间的同步性
-　　
+　　在使用同步 synchronized(this) 代码块时需要注意的是，当一个线程访问 object 的一个 synchronized(this) 同步代码块时，其他线程对同一个 object 中所有其他 synchronized(this) 同步代码块的访问将被阻塞，这说明 synchronized 使用的 “对象监视器” 是一个。
 
 #### 2.2.6 验证同步 synchronized(this) 代码块是锁定当前对象的
-　　
-
+　　和 synchronized 方法一样，synchronized(this) 代码块也是锁定当前对象的。
 
 #### 2.2.7 将任意对象作为对象监视器
 　　
