Java多线程编程读书笔记

--- a/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
+++ b/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
@@ -85,53 +85,95 @@
 　　和 synchronized 方法一样，synchronized(this) 代码块也是锁定当前对象的。
 
 #### 2.2.7 将任意对象作为对象监视器
-　　
+　　多个线程调用同一个对象中的不同名称的 synchronized 同步方法或 synchronized(this) 同步代码块时，调用的效果就是按顺序执行，也就是同步的，阻塞的。
 
+　　这说明 synchronized 同步方法或 synchronized(this) 同步代码块分别有两种作用。
+
+　　（1）synchronized 同步方法
+　　1）对其他 synchronized 同步方法或 synchronized(this) 同步代码块调用呈阻塞状态。
+　　2）同一时间只有一个线程可以执行 synchronized 同步方法中的代码。
+
+　　（2）synchronized(this) 同步代码块
+　　1）对其他 synchronized 同步方法或 synchronized(this) 同步代码块调用呈阻塞状态。
+　　2）同意时间只有一个线程可以执行 synchronized(this) 同步代码块中的代码。
+
+　　使用 synchronized(this) 格式来同步代码块，其实 Java 还支持对 “ 任意对象 ” 作为 “ 对象监视器 ” 来实现同步的功能。这个 “ 任意对象 ” 大多数是实例变量及方法的参数，使用格式为 synchronized(非 this 对象)。
+
+　　根据前面对 synchronized(this) 同步代码块的作用总结可知，synchronized(非 this 对象) 格式的作用只有 1 种：synchronized(非 this 对象 x)同步代码块。
+
+　　1）在多个线程持有 “对象监视器” 为同一个对象的前提下，同一时间只有一个线程可以执行 synchronized(非 this 对象 x)同步代码块中的代码。
+
+　　2）当持有 “ 对象监视器 ” 为同一个对象的前提下，同一时间只有一个线程可以执行 synchronized( 非 this 对象 x )同步代码块中的代码。
+
+　　锁非 this 对象具有一定的优点：如果在一个类中有很多个 synchronized 方法，这时虽然能实现同步，但会受到阻塞，所以影响运行效率；但如果使用同步代码块锁非 this 对象，则 synchronized(非 this) 代码块中的程序与同步方法是异步的，不与其他锁 this 同步方法争抢 this 锁，则可大大提高运行效率。
+
+　　使用 “ synchronized( 非 this 对象 x ) 同步代码块”格式进行同步操作时，对象监视器必须是同一个对象。如果不是同一个对象监视器，运行的结果就是异步调用了，就会交叉运行。
+
+　　同步代码块放在非同步 synchronized 方法中进行声明，并不能保证调用方法的线程的执行同步 / 顺序性，也就是线程调用方法的顺序是无须的，虽然在同步块中执行的顺序是同步的，这样极易出现 “ 脏读 ” 问题。使用 “ synchronized( 非 this 对象 x ) 同步代码块 ” 格式也可以解决 “ 脏读 ” 问题。
 
 #### 2.2.8 细化验证 3 个结论
-　　
+　　“ synchronized ( 非 this 对象 x ) ” 格式的写法是将 x 对象本身作为 “ 对象监视器 ”，这样就可以得出以下 3 个结论：
+
+　　1）当多个线程同时执行 synchronized(x){} 同步代码块时呈同步效果。
+
+　　2）当其他咸亨执行 x 对象中 synchronized 同步方法时呈同步效果。
+
+　　3）当其他线程执行 x 对象方法里面的 synchronized(this) 代码块时也呈现同步效果。
+
+　　但需要注意：如果其他线程调用不加 synchronized 关键字的方法时，还是异步调用。
 
 #### 2.2.9 静态同步 synchronized 方法与 synchronized(class) 代码块
-　　
+　　关键字 synchronized 还可以应用在 static 静态方法上，如果这样写，那就是对当前的 *.java 文件对应的 Class 类进行持锁。
 
+　　给静态方法加关键字 synchronized 和将 synchronized 关键字加到非 static 方法上使用的效果是一样的，都是同步的效果。其实还是有本质上的不同的，synchronized 关键字加到 static 静态方法上是给 Class 类上锁，而 synchronized 关键字加到非 static 静态方法上是给对象上锁。而 Class 锁可以对类的所有对象实例起作用。
+
+　　同步 synchronized(class) 代码块的作用其实和 synchronized static 方法的作用一样。
 
 #### 2.2.10 数据类型 String 的常量池特性
-　　
+　　在 JVM 中具有 String 常量池缓存的功能。
+
+　　将 synchronized(string) 同步块与 String 联合使用时，要注意常量池带来的一些例外。
+
+　　如果 String 的两个值是相同的，两个线程持有相同的锁，就会造成一个线程不行执行，这就是 String 常量池所带来的问题。因此在大多数的情况下，同步 synchronized 代码块都不使用 String 作为锁对象，而改用其他，比如 new Object() 实例化一个 Object 对象，但它并不放入缓存中。
 
 #### 2.2.11 同步 synchronized 方法无限等待与解决
-　　
+　　同步方法容易造成死循环。可以使用同步块来解决问题。
 
 #### 2.2.12 多线程的死锁
-　　
+　　Java 线程死锁是一个经典的多线程问题，因为不同的线程都在等待根本不可能被释放的锁，从而导致所有的任务都无法继续完成。在多线程技术中。“死锁”是必须避免的，因为这会造成线程的“假死”。
+
+　　可以使用 JDK 自带的工具来监测是否有死锁的现象。jps 命令、jstack 命令。
+
+　　死锁是程序设计的 Bug，在设计程序时就要避免双方互相持有对方的锁的情况。
 
 #### 2.2.13 内置类与静态内置类
-　　
+　　关键字 synchronized 的知识点还涉及内置类的使用。
 
 #### 2.2.14 内置类与同步：实验 1
-　　
+　　在内置类中有两个同步方法，但使用的确实不同的锁，打印的结果也是异步的。
 
 #### 2.2.15 内置类与同步：实验 2
-　　
-
+　　同步代码块 synchronized(class2) 对 class2 上锁后，其他线程只能以同步的方式调用 class2 中的静态同步方法。
 
 #### 2.2.16 锁对象的改变
-　　
+　　在将任何数据类型作为同步锁时，需要注意的是，是否有多个线程同时持有锁随想，如果同时持有相同的锁对象，则这些线程之间就是同步的；如果分别获得锁对象，这些线程之间就是异步的。
 
+　　只要对象不变，即使对象的属性被改变，运行的结果还是同步。
 
 ## 2.3 volatile 关键字
-　　
+　　关键字 volatile 的主要作用是使变量在多个线程间可见。
 
 #### 2.3.1 关键字 volatile 与死循环
-　　
-
+　　如果不是在多继承的情况下，使用继承 Thread 类和实现 Runnable 接口在取得程序运行的结果上并没有什么太大的区别。如果一旦出现“多继承”的情况，则用实现 Runnable 接口的方式来处理多线程的问题就是很有必要的。
 
 #### 2.3.2 解决同步死循环
-　　
+　　在方法中处理 while() 循环，导致程序不能继续执行后面的代码，线程就无法停止下来。解决的办法是用多线程技术。
 
 
 #### 2.3.3 解决异步死循环
-　　
+　　将 while() 循环的执行放入线程中，然后出现死循环，解决的办法是使用 volatile 关键字。
 
+　　关键字 volatile 的作用是强制从公共堆栈中取得变量的值，而不是从线程私有数据栈中取得变量的值。
 
 #### 2.3.4 volatile 非原子的特性
 　　
