多线程第二章读书笔记

--- a/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
+++ b/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
@@ -169,30 +169,77 @@
 #### 2.3.2 解决同步死循环
 　　在方法中处理 while() 循环，导致程序不能继续执行后面的代码，线程就无法停止下来。解决的办法是用多线程技术。
 
-
-#### 2.3.3 解决异步死循环
 　　将 while() 循环的执行放入线程中，然后出现死循环，解决的办法是使用 volatile 关键字。
 
 　　关键字 volatile 的作用是强制从公共堆栈中取得变量的值，而不是从线程私有数据栈中取得变量的值。
 
-#### 2.3.4 volatile 非原子的特性
-　　
+#### 2.3.3 解决异步死循环
+　　通过使用 volatile 关键字，强制的从公共内存中读取变量的值。
 
+　　使用 volatile 关键字增加了实例变量在多个线程之间的可见性。但 volatile 关键字最致命的缺点是不支持原子性。
+
+　　下面将关键字 synchronized 和 volatile 进行一下比较： 
+
+　　1）关键字 volatile 是线程同步的轻量级实现，所以 volatile 性能肯定比 synchronized 要好，并且 volatile 只能修饰于变量，而 synchronized 可以修饰方法，以及代码块。随着 SDK 新版本的发布，synchronized 关键字在执行效率上得到大提升，在开发中使用 synchronized 关键字的比率还是比较大的。
+
+　　2）多线程访问 volatile 不会发生阻塞，而 synchronized 会出现阻塞。
+
+　　3）volatile 能保证数据的可见性，但不能保证原子性；而 synchronized 可以保证原子性，也可以间接保证可见性，因为它会将私有内存和公共内存中的数据做同步。
+
+　　4）再次重申一下，关键字 volatile 解决的是变量在多个线程之间的可见性；而 synchronized 关键字解决的是多个线程之间访问资源的同步性。
+
+　　线程安全包含原子性和可见性两个方面，Java 的同步机制都是围绕这两个方面来确保线程安全的。
+
+#### 2.3.4 volatile 非原子的特性
+　　关键字 volatile 虽然增加了实例变量在多个线程之间的可见性，但它不具备同步性，那么也就不具备原子性。
+
+　　关键字 volatile 主要使用的场合是在多个线程中可以感知实例变量被更改了，并且可以获得最新的值使用，也就是用多线程读取共享变量时可以获得最新值使用。
+
+　　关键字 volatile 提示线程每次从共享内存中读取变量，而不是从私有内存中读取，这样就保证了同步数据的可见性。
+
+　　表达式 i++ 的操作步骤分解如下：
+
+　　1）从内存中取出 i 的值；
+
+　　2）计算 i 的值；
+
+　　3）将 i 的值写到内存中。
+
+　　假如在第 2 步计算值的时候，另外一个线程也修改 i 的值，那么这个时候就会出现脏数据。解决的办法其实就是使用 synchronized 关键字。所以说 volatile 本身并不处理数据的原子性，而是强制对数据的读写及时影响到主内存的。
+
+　　变量在内存中工作的过程如下图：
+
+（变量在内存中的工作过程图）
+
+　　由此，可以得出一下结论：
+
+　　1）read 和 load 阶段：从主存复制变量到当前线程工作内存；
+
+　　2）use 和 assign 阶段：执行代码，改变共享变量值；
+
+　　3）store 和 write 阶段：用工作内存数据刷新主存对应变量的值。
+
+　　在多线程环境中，use 和 assign 时多次出现的，但这一操作并不是原子性，也就是在 read 和 load 之后，如果主内存 count 变量发生修改之后，线程工作内存中的值由于已经加载，不会产生对应的变化，也就是私有内存和共有内存中的变量不同步，所以计算出来的结果会和预期不一样，也就出现了非线程安全问题。
+
+　　对于用 volatile 修饰的变量，JVM 虚拟机只是保证从主内存加载到线程工作内存的值是最新的。也就是说，volatile 关键字解决的是变量读时的可见性问题，但无法保证原子性，对于多个线程访问同一个实例变量还是需要加锁同步。
 
 #### 2.3.5 使用原子类进行 i++ 操作
-　　
+　　除了在 i++ 操作时使用 synchronized 关键字实现同步外，还可以使用 AtomicInteger 原子类进行实现。
 
+　　原子操作是不能分割的整体，没有其他线程能够中断或检查正在原子操作中的变量。一个原子（atomic）类型就是一个原子操作可用的类型，它可以在没有锁的情况下做到线程安全（thread-safe）。
 
 #### 2.3.6 原子类也并不完全安全
-　　
+　　原子类在具有有逻辑性的情况下输出结果也具有随机性。
 
+　　出现这种情况是因为方法是原子的，但方法和方法之间的调用却不是原子的。解决这样的问题必须要用同步。
 
 #### 2.3.7 synchronized 代码块有 volatitle 同步的功能
-　　
+　　关键字 synchronized 可以使多个线程访问同一个资源具有同步性，而且它还具有将线程工作内存中的私有变量与公共内存中的变量同步的功能。
 
+　　关键字 synchronized 可以保证在同一时刻，只有一个线程可以执行某一个方法或某一个代码块。它包含两个特征：互斥性和可见性。同步 synchronized 不仅可以解决一个线程看到对象处于不一致的状态，还可以保证进入同步方法或者同步代码块的每个线程，都看到由同一个锁保护之前所有的修改效果。
 
 ## 2.4 本章总结
-　　
+　　学习完多线程同步后就可以有效控制线程间处理数据的顺序性，及对处理后的数据进行有效值的保证，更好地对线程执行结果有正确的预期。
 
 
 
