--- a/项目信息/剪辑助理项目/第四天：本地视频列表显示.md
+++ b/项目信息/剪辑助理项目/第四天：本地视频列表显示.md
@@ -7,29 +7,238 @@
 
 　　列表的实现选择了 GridView 组件，图片的实现使用了开源库 Glide。
 
-## 2. GridView 的使用
+## 2. 图片的显示
+　　图片的显示选择了 Glide 开源库，Glide 是一款由 Bump Technologies 开发的图片加载框架，使得我们可以在 Adapter 平台以极度简单的方式加载和展示图片。
 
-#### 2.1 GridView 是什么
+　　Glide 是一个快速高效的 Android 图片加载库，注重于平滑的滚动。Glide 提供了易用的 API，高性能、可扩展的图片解码管道（decode pipeline），以及自动的资源池技术。
 
-　　GlideView 网格视图是按照行列的方式来显示内容的，一般用于显示图片等内容，实现九宫格图，GridView 是首选，也是最简单的。
-
-#### 2.2 GridView 的常用属性
+#### 2.1 Glide 的使用
 ```
-android:numColumns="4"--------列数
-android:columnWidth="10dp"-------每列的宽度，也就是Item的宽度
-android:verticalSpacing="10dp"----------垂直边距
-android:horizontalSpacing="10dp"-------水平边距
+       Glide.with(videoViewHolder.iv_image.getContext())
+                .load(Uri.fromFile(new File(path)))
+                .listener(new RequestListener<Drawable>() {
+                    @Override
+                    public boolean onLoadFailed(@Nullable GlideException e, Object model, Target<Drawable> target, boolean isFirstResource) {
+                        Log.d(TAG,"showImage onLoadFailed e:"+e);
+                        videoViewHolder.pb_loading.setVisibility(View.GONE);
+                        videoViewHolder.tv_error.setVisibility(View.VISIBLE);
+                        videoViewHolder.tv_error.setText("加载失败，点击重试");
+                        mLoadStatusMap.put(path, LOAD_FAILED);
+                        return false;
+                    }
+
+                    @Override
+                    public boolean onResourceReady(Drawable resource, Object model, Target<Drawable> target, DataSource dataSource, boolean isFirstResource) {
+                        Log.d(TAG,"showImage onResourceReady");
+                        videoViewHolder.pb_loading.setVisibility(View.GONE);
+                        videoViewHolder.tv_error.setVisibility(View.GONE);
+                        mLoadStatusMap.put(path, LOAD_SUCCESS);
+                        return false;
+                    }
+                })
+                .into(videoViewHolder.iv_image);
+```
+　　很简单是吧。
+
+## 3. 列表的显示
+　　图片列表的实现选择了 GridView 组件，GridView 是一个在二维可滚动的网格中展示内容的组件。网格中的内容通过使用 adapter 自动插入到布局中。
+
+#### 3.1 adapter 的实现
+```
+package com.zhangmiao.clipassistant.Adapter;
+
+import android.graphics.drawable.Drawable;
+import android.net.Uri;
+import android.support.annotation.Nullable;
+import android.util.Log;
+import android.view.View;
+import android.view.ViewGroup;
+import android.widget.BaseAdapter;
+import android.widget.ImageView;
+import android.widget.ProgressBar;
+import android.widget.TextView;
+
+import com.bumptech.glide.Glide;
+import com.bumptech.glide.load.DataSource;
+import com.bumptech.glide.load.engine.GlideException;
+import com.bumptech.glide.request.RequestListener;
+import com.bumptech.glide.request.target.Target;
+import com.zhangmiao.clipassistant.Bean.LocalVideoBean;
+import com.zhangmiao.clipassistant.R;
+
+import java.io.File;
+import java.util.HashMap;
+import java.util.List;
+
+/**
+ * 本地视频列表适配
+ * Author: zhangmiao
+ * Date: 2019/8/2
+ */
+public class LocalVideoListAdapter extends BaseAdapter {
+
+    private static final String TAG = LocalVideoListAdapter.class.getSimpleName();
+
+    public static final int LOAD_LOADING = 1;
+    public static final int LOAD_FAILED = 2;
+    public static final int LOAD_SUCCESS = 3;
+
+    /**
+     * 视频列表数据
+     */
+    private List<LocalVideoBean> mVideoBeanList;
+
+    /**
+     * 加载状态
+     */
+    private HashMap<String, Integer> mLoadStatusMap;
+
+    /**
+     * 选择视频点击事件
+     */
+    private OnSelectVideoListener mOnSelectVideoListener;
+
+    private int mCurrectSelectIndex = -1;
+
+    public LocalVideoListAdapter(List<LocalVideoBean> videoBeanList) {
+        this.mVideoBeanList = videoBeanList;
+        mLoadStatusMap = new HashMap<>();
+    }
+
+    public void setOnSelectVideoListener(OnSelectVideoListener onSelectVideoListener) {
+        this.mOnSelectVideoListener = onSelectVideoListener;
+    }
+
+    @Override
+    public int getCount() {
+        return mVideoBeanList == null ? 0 : mVideoBeanList.size();
+    }
+
+    @Override
+    public Object getItem(int i) {
+        return mVideoBeanList.get(i);
+    }
+
+    @Override
+    public long getItemId(int i) {
+        return i;
+    }
+
+    @Override
+    public View getView(final int position, View view, ViewGroup viewGroup) {
+        final VideoViewHolder holder;
+        if (view == null) {
+            view = View.inflate(viewGroup.getContext(), R.layout.item_local_videl, null);
+            ViewGroup.LayoutParams lp = new ViewGroup.LayoutParams(104, 164);
+            view.setLayoutParams(lp);
+            holder = new VideoViewHolder(view);
+            view.setTag(holder);
+        } else {
+            holder = (VideoViewHolder) view.getTag();
+        }
+        final String imagePath = mVideoBeanList.get(position).getPath();
+        showImage(holder, imagePath);
+        holder.tv_error.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View view) {
+                showImage(holder, imagePath);
+            }
+        });
+        holder.iv_image.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View view) {
+                int status = mLoadStatusMap.get(imagePath);
+                switch (status) {
+                    case LOAD_LOADING:
+                    case LOAD_FAILED:
+                        break;
+                    case LOAD_SUCCESS:
+                        Log.d(TAG, "setOnClickListener view.getParent():" + view.getParent());
+                        if (mOnSelectVideoListener != null) {
+                            mOnSelectVideoListener.onSelectVideo(position,mCurrectSelectIndex, mVideoBeanList.get(position));
+                        }
+                        mCurrectSelectIndex = position;
+                        break;
+                    default:
+                        break;
+                }
+            }
+        });
+
+        return view;
+    }
+
+    private void showImage(final VideoViewHolder videoViewHolder, final String path) {
+        videoViewHolder.pb_loading.setVisibility(View.VISIBLE);
+        mLoadStatusMap.put(path, LOAD_LOADING);
+        videoViewHolder.tv_error.setVisibility(View.GONE);
+        Glide.with(videoViewHolder.iv_image.getContext())
+                .load(Uri.fromFile(new File(path)))
+                .listener(new RequestListener<Drawable>() {
+                    @Override
+                    public boolean onLoadFailed(@Nullable GlideException e, Object model, Target<Drawable> target, boolean isFirstResource) {
+                        Log.d(TAG,"showImage onLoadFailed e:"+e);
+                        videoViewHolder.pb_loading.setVisibility(View.GONE);
+                        videoViewHolder.tv_error.setVisibility(View.VISIBLE);
+                        videoViewHolder.tv_error.setText("加载失败，点击重试");
+                        mLoadStatusMap.put(path, LOAD_FAILED);
+                        return false;
+                    }
+
+                    @Override
+                    public boolean onResourceReady(Drawable resource, Object model, Target<Drawable> target, DataSource dataSource, boolean isFirstResource) {
+                        Log.d(TAG,"showImage onResourceReady");
+                        videoViewHolder.pb_loading.setVisibility(View.GONE);
+                        videoViewHolder.tv_error.setVisibility(View.GONE);
+                        mLoadStatusMap.put(path, LOAD_SUCCESS);
+                        return false;
+                    }
+                })
+                .into(videoViewHolder.iv_image);
+    }
+
+    public static class VideoViewHolder {
+        private ImageView iv_image;
+        private ProgressBar pb_loading;
+        private TextView tv_error;
+
+        public VideoViewHolder(View view) {
+            iv_image = (ImageView) view.findViewById(R.id.item_local_video_image_iv);
+            pb_loading = (ProgressBar) view.findViewById(R.id.item_local_video_loading_pb);
+            tv_error = (TextView) view.findViewById(R.id.item_local_video_error_tv);
+        }
+    }
+
+    public interface OnSelectVideoListener {
+        void onSelectVideo(int position, int lastSelectPosition, LocalVideoBean localVideoBean);
+    }
+}
+```
+#### 3.2 列表实现
+```
+           LocalVideoListAdapter localVideoListAdapter = new LocalVideoListAdapter(localVideoBeanList);
+            localVideoListAdapter.setOnSelectVideoListener(new LocalVideoListAdapter.OnSelectVideoListener() {
+                @Override
+                public void onSelectVideo(int position, int lastSelectPosition, LocalVideoBean localVideoBean) {
+                    Log.d(TAG, "onSelectVideo localVideoBean:" + localVideoBean);
+
+                    View view = gv_videoList.getChildAt(position);
+                    Log.d(TAG, "onSelectVideo view:" + view);
+                    view.setSelected(true);
+                    if (lastSelectPosition >= 0 && lastSelectPosition < gv_videoList.getChildCount()) {
+                        View lastView = gv_videoList.getChildAt(lastSelectPosition);
+                        lastView.setSelected(false);
+                    }
+                }
+            });
+            gv_videoList.setAdapter(localVideoListAdapter);
 ```
 
-#### 2.3 GridView 实现数据加载的步骤
+## 4.完善
+　　在写列表显示的时候发现忘记写没有视频的显示了，所以在布局上加上了一个文本提示，当视频列表为空时，显示提醒。
+```
 
-
-## 3. Glide 的使用
-
-
-
-## 4. 本地视频列表的实现
-
+``
 
 ## 总结
 　　今天就写这么多，本地视频的列表就写好了，接下来就要写视频的播放了。
