第三章阅读完毕

--- a/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
+++ b/BookNote/Java多线程编程核心技术/第2章-对象及变量的并发访问.md
@@ -208,8 +208,7 @@
 　　假如在第 2 步计算值的时候，另外一个线程也修改 i 的值，那么这个时候就会出现脏数据。解决的办法其实就是使用 synchronized 关键字。所以说 volatile 本身并不处理数据的原子性，而是强制对数据的读写及时影响到主内存的。
 
 　　变量在内存中工作的过程如下图：
-
-（变量在内存中的工作过程图）
+![](./变量在内存中的工作过程.png)
 
 　　由此，可以得出一下结论：
 
