--- a/BookNote/Java多线程编程核心技术/第3章-线程间通信.md
+++ b/BookNote/Java多线程编程核心技术/第3章-线程间通信.md
@@ -34,7 +34,7 @@
 　　notifyAll() 放啊可以使所有正在等待队列中等待同一共享资源的“全部”线程从等待状态退出，进入可运行状态。此时，优先级最高的那个线程最先执行，但也有可能是随机执行，因为这要取决与 JVM 虚拟机的实现。
 
 　　线程状态切换示意图：
-（图）
+![](./线程状态切换示意图.png)
 
 　　1）新创建一个新的线程对象后，再调用它的 start() 方法，系统会为此线程分配 cpu 资源，使其处于 Runnable(可运行)状态，这是一个准备运行的阶段，如果线程抢占到 CPU 资源，此线程就处于 Running(运行)状态。
 
@@ -183,28 +183,32 @@
 　　join(long) 与线程争抢锁，如果 join(long) 争抢到锁，则主线程会先运行完毕；如果是线程争抢到锁，则线程先运行，然后主线程在运行完毕。
 
 ## 3.3 类 ThreadLocal 的使用
-　　
+　　变量的共享可以使用 public static 变量的形式，所有的线程都使用同一个 public static 变量。如果想实现每一个线程都有自己的共享变量该如何解决呢？JDK 中提供的类 ThreadLocal 正是为了解决这样的问题。
+
+　　类 ThreadLocal 主要解决的就是每个线程绑定自己的值，可以将 ThreadLocal 类比喻成全局存放数据的盒子，盒子中可以存储每个线程的私有数据。
 
 #### 3.3.1 方法 get() 与 null
-　　
+　　类 ThreadLocal 解决的是变量在不同线程间的隔离性，也就是不同线程拥有自己的值，不同线程中的值是可以放入 ThreadLocal 类中进行保存的。get() 方法取值，set() 方法赋值。
 
 #### 3.3.2 验证线程变量的隔离性
-　　
+　　虽然多个线程都向 ThreadLocal 对象中 set() 数据值，但每个线程还是能取出自己的数据。
 
 #### 3.3.3 解决 get() 返回 null 问题
-　　
+　　覆盖 initialValue() 方法设置初始值。
 
 #### 3.3.4 再次验证线程变量的隔离性
-　　
+　　覆盖 initialValue() 方法设置初始值后，各个线程也各自拥有各自的初始值。
 
 ## 3.4 类 InheritableThreadLocal 的使用
-　　
+　　使用类 InheritableThreadLocal 可以在子线程中取得父线程继承下来的值。
 
 #### 3.4.1 值继承
-　　
+　　使用 InheritableThreadLocal 类可以让子线程从父线程取得值。
 
 #### 3.4.2 值继承再修改
-　　
+　　覆盖 childValue() 方法可以在继承的同时对值进行下一步的处理。
+
+　　但在使用 InheritableThreadLocal 类需要注意一点的是，如果子线程在取得值的同时，主线程将 InheritableThreadLocal 中的值进行更改，那么子线程取到的值还是旧值。
 
 ## 3.5 本章总结
 
