搜索的文章记录

--- a/项目信息/项目信息收集.md
+++ b/项目信息/项目信息收集.md
@@ -21,6 +21,9 @@ Android 音视频系列：视频容器操作篇--mp4 容器打包实现
 
 6.https://blog.csdn.net/da_caoyuan/article/details/87984877 Android 获取本地视频+视频裁剪+视频录制
 
+7.https://www.jianshu.com/p/aac2f8699735 Android 音视频编码那点破事
+
+8.https://github.com/xufuji456/FFmpegAndroid 音视频编解码
 
 ## 音频
 
