多线程编程第5章阅读完毕

--- a/BookNote/Java多线程编程核心技术/第6章-单例模式与多线程.md
+++ b/BookNote/Java多线程编程核心技术/第6章-单例模式与多线程.md
@@ -1,10 +1,10 @@
 # 第 6 章 单例模式与多线程
 
 ## 本章主要内容
-	
+	如何使单例模式遇到多线程是安全的、正确的。
 
 ## 6.1 立即加载 / “饿汉模式”
-　　
+　　什么是立即加载？立即加载就是使用
 
 ## 6.2 延迟加载 / “懒汉模式”
 　　
