--- a/BookNote/Java多线程编程核心技术/第6章-单例模式与多线程.md
+++ b/BookNote/Java多线程编程核心技术/第6章-单例模式与多线程.md
@@ -4,19 +4,26 @@
 	如何使单例模式遇到多线程是安全的、正确的。
 
 ## 6.1 立即加载 / “饿汉模式”
-　　什么是立即加载？立即加载就是使用
+　　什么是立即加载？立即加载就是使用类的时候已经将对象创建完毕，常见的实现办法就是直接 new 实例化。而立即加载也称为“饿汉模式”。
 
 ## 6.2 延迟加载 / “懒汉模式”
-　　
+　　什么是延迟加载？延迟加载就是在调用 get() 方法时实例才被创建，常见的实现办法就是在 get() 方法中进行 new 实例化。延迟加载也称为“懒汉模式”。
 
 ###### 1. 延迟加载 / “懒汉模式” 解析
-　　
+　　延迟加载 / “懒汉模式” 是在调用方法时实例才被创建。
+
+　　这种模式如果是在多线程的环境中，就会出现取出多个实例的情况，与单例模式的初衷是相背离的。
 
 ###### 2. 延迟加载 / "懒汉模式" 的缺点
-　　
+　　“延迟加载”在多线程的环境中，根本不能实现保持单例的状态。
 
 ###### 3. 延迟加载 / "懒汉模式"的解决方案
-　　
+（1）声明 synchronized 关键字
+　　既然多个线程可以同时进入 getInstance() 方法，那么只需要对 getInstance() 方法声明 synchronized 关键字即可。
+
+　　为 getInstance() 方法加入同步 synchronized 关键字得到相同实例的对象，但此种方法的运行效率非常低下，是同步运行的，下一个线程想要取得对象，则必须等上一个线程释放锁之后，才可以继续执行。
+
+（2）尝试同步代码块
 
 
 ## 6.3 使用静态内置类实现单例模式
